@startuml
class "WorldEntityLocator`1"<T> {
    + WorldEntityLocator(worldService:IWorldService)
    + FindNearest(entities:IEnumerable<T>, maxDistance:double, fromPosition:Position?) : T?
    + FindInRadius(entities:IEnumerable<T>, radius:double) : IEnumerable<T>
    - GetDistance(pos1:Position, pos2:Position) : double
}
class "IEntityLocator`1"<T> {
}
"IEntityLocator`1" "<T>" <|-- "WorldEntityLocator`1"
"WorldEntityLocator`1" --> "_worldService" IWorldService
@enduml
